updates for packages

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "engines": {
     "node": ">=6.13.0"
   },
-  "scripts": {},
+  "scripts": {
+    "dev": "nodemon server/dev.js"
+  },
   "dependencies": {
     "express": "^4.17.1"
   },
