--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon server/dev.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1"
   },
   "devDependencies": {
