--- a/package.json
+++ b/package.json
@@ -8,14 +8,28 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "dev": "nodemon server/dev.js"
+    "dev": "nodemon server/dev.js",
+    "setup": "npm install && npm run build",
+    "build": "webpack",
+    "dev-build": "webpack --watch"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/core": "^7.12.16",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0"
   }
 }
