--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ coverage
 # Compiled Dirs (http://nodejs.org/api/addons.html)
 build/
 .env
+client/dist
+client/dist/index.html
+client/dist/proxy.js
+client/dist/proxy.js.LICENSE.txt
