--- a/babel.config.json
+++ b/babel.config.json
@@ -1,1 +1,1 @@
-{ "presets": ["@babel/preset-env", "@babel/preset-react"], "plugins": ["babel-plugin-styled-components"] }
+{ "presets": ["@babel/preset-env","@babel/preset-env", "@babel/preset-react"], "plugins": ["babel-plugin-styled-components"] }
